# zbox

./: .travis.yml  MANIFEST.in  setup.cfg  setup.py
bindings/rust/zbox/: Cargo.toml  __init__.py  error.rs  file.rs  fs.py  lib.rs  repo.rs  utils.rs
bindings/rust/zbox/_zbox/: Cargo.toml  constants.rs  error.rs  file.rs  fs.rs  lib.rs  macros.rs  repo.rs  utils.rs
bindings/rust/zbox/_zbox/file/: file.rs  mod.rs  mode.rs
bindings/rust/zbox/_zbox/fs/: errors.rs  mod.rs  zboxfs.rs
bindings/rust/zbox/_zbox/repo/: repo.rs
ci/: install-libsodium.sh  install-rustup.sh  install-sccache.sh  setup.sh
ci/travis/: setup.sh  wheels-linux.sh  wheels-osx.sh
tests/: __init__.py  test_file.py  test_fs.py  test_repo.py
zbox/: __init__.py  fs.py
zbox/_zbox/: constants.rs  lib.rs  utils.rs
zbox/_zbox/file/: errors.rs  mode.rs
zbox/_zbox/fs/: enums.rs
zbox/_zbox/repo/: errors.rs  mod.rs
