[metadata]
name = bindings.rust.zbox
author = Martin Larralde
author-email = martin.larralde@ens-paris-saclay.fr
home-page = https://github.com/pybindings/bindings.rust.zbox
description = Python bindings to the zbox Rust crate
long-description = file: README.rst
version = 0.4.0
license = MIT
license-file = COPYING
classifiers =
	Programming Language :: Rust
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Intended Audience :: Developers
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: System :: Filesystems
	Operating System :: OS Independent

[options]
zip_safe = false
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
test_suite = tests
setup_requires =
	setuptools
	setuptools-rust

[options.extras_require]
dev =
	setuptools
	setuptools-rust
	docutils
	Pygments

[build_rust]
release = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar

[aliases]
bdist_wheel = build_rust --qbuild bdist_wheel
test = build_rust --qbuild test

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = false

[pydocstyle]
inherit = false
ignore = D100,D200,D203,D213,D406,D407
