[package]
name = "bindings.rust.zbox._zbox"
version = "0.4.0"
authors = ["Martin Larralde <martin.larralde@ens-cachan.fr>"]
publish = false

[lib]
crate-type = ["cdylib"]
name = "bindings_rust_zbox"
path = "lib.rs"

[dependencies]
pyo3 = { version = "*", features = ["extension-module"] }
zbox = "0.5.0"
regex = "^0.2"

[target.'cfg(unix)'.dependencies]
memchr = "^2.0.1"
