[package]
name = "zbox.py"
version = "0.4.0"
authors = ["Martin Larralde <martin.larralde@ens-cachan.fr>"]
publish = false

[lib]
crate-type = ["cdylib"]
name = "_zbox"
path = "lib.rs"

[dependencies]
lazy_static = "*"

[dependencies.zbox]
git = "https://github.com/zboxfs/zbox"

[dependencies.pyo3]
git = "https://github.com/PyO3/pyo3.git"
version = "^0.2"
features = ["extension-module"]

[target.'cfg(unix)'.dependencies]
memchr = "^2.0.1"
