[package]
name = "bindings.rust.zbox"
version = "0.4.0"
authors = ["Martin Larralde <martin.larralde@ens-cachan.fr>"]
publish = false

[lib]
crate-type = ["cdylib"]
name = "_zbox"
path = "lib.rs"

[dependencies]
lazy_static = "^1.0"
pyo3 = "^0.3"

[dependencies.zbox]
git = "https://github.com/zboxfs/zbox"

[target.'cfg(unix)'.dependencies]
memchr = "^2.0.1"
